[gd_scene load_steps=11 format=3 uid="uid://xpp741oj6tfx"]

[ext_resource type="Script" path="res://scenes/enemy/enemy.gd" id="1_4jl5q"]
[ext_resource type="Texture2D" uid="uid://bjo0f67n2fin7" path="res://resources/graphics/animation/enemie_bird_sheet.png" id="1_ee8gn"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_85mir"]
radius = 7.0
height = 16.0

[sub_resource type="Animation" id="Animation_m47a3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_8rtj6"]
resource_name = "death_left"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [10, 11, 12, 13, 14]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}

[sub_resource type="Animation" id="Animation_wb67u"]
resource_name = "death_right"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [15, 16, 17, 18, 19]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}

[sub_resource type="Animation" id="Animation_3m6uf"]
resource_name = "fly_left"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}

[sub_resource type="Animation" id="Animation_s701r"]
resource_name = "fly_right"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [5, 6, 7, 8, 9]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rds1m"]
_data = {
"RESET": SubResource("Animation_m47a3"),
"death_left": SubResource("Animation_8rtj6"),
"death_right": SubResource("Animation_wb67u"),
"fly_left": SubResource("Animation_3m6uf"),
"fly_right": SubResource("Animation_s701r")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sm2fe"]
size = Vector2(13, 1)

[node name="Enemy" type="CharacterBody2D"]
collision_layer = 4
script = ExtResource("1_4jl5q")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_85mir")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -1)
texture = ExtResource("1_ee8gn")
hframes = 5
vframes = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_rds1m")
}

[node name="RaycastLeft" type="RayCast2D" parent="."]
position = Vector2(-8.06, 0)
target_position = Vector2(-0.94, 0)
collision_mask = 2

[node name="RaycastRight" type="RayCast2D" parent="."]
position = Vector2(8.055, 0)
target_position = Vector2(1, 0)
collision_mask = 2

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(0, -10)
collision_layer = 4
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 5)
shape = SubResource("RectangleShape2D_sm2fe")

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
